@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.11.13-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-11-13 07:28:42, took 00:14:39, with 50 workers, on 3524 cases, 0 failed, 0 traces, 4 retries<br/>
+tested: 2024-11-13 08:06:26, took 00:15:42, with 50 workers, on 3526 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1564,6 +1564,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-acl116.tst">p4lang-acl116.tst</a></td><td>success</td><td>p4lang: qinq interface inspection with ingress drop</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-acl117.tst">p4lang-acl117.tst</a></td><td>success</td><td>p4lang: qinq interface verify source</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-acl118.tst">p4lang-acl118.tst</a></td><td>success</td><td>p4lang: qinq interface loose verify source</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-acl119.tst">p4lang-acl119.tst</a></td><td>success</td><td>p4lang: bridge filter access list</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-acl120.tst">p4lang-acl120.tst</a></td><td>success</td><td>p4lang: vlan bridge filter access list</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt001.tst">p4lang-crypt001.tst</a></td><td>success</td><td>p4lang: macsec with des</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt002.tst">p4lang-crypt002.tst</a></td><td>success</td><td>p4lang: macsec with 3des</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt003.tst">p4lang-crypt003.tst</a></td><td>success</td><td>p4lang: macsec with aes128cbc</td></tr>
