@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.11.13-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-11-13 07:42:17, took 00:13:14, with 50 workers, on 617 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2024-11-13 08:16:35, took 00:09:47, with 50 workers, on 619 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
@@ -120,6 +120,8 @@ http://sources.freertr.org/cfg/p4lang-acl115.tst;p4lang-acl115.tst;success;p4lan
 http://sources.freertr.org/cfg/p4lang-acl116.tst;p4lang-acl116.tst;success;p4lang: qinq interface inspection with ingress drop
 http://sources.freertr.org/cfg/p4lang-acl117.tst;p4lang-acl117.tst;success;p4lang: qinq interface verify source
 http://sources.freertr.org/cfg/p4lang-acl118.tst;p4lang-acl118.tst;success;p4lang: qinq interface loose verify source
+http://sources.freertr.org/cfg/p4lang-acl119.tst;p4lang-acl119.tst;success;p4lang: bridge filter access list
+http://sources.freertr.org/cfg/p4lang-acl120.tst;p4lang-acl120.tst;success;p4lang: vlan bridge filter access list
 http://sources.freertr.org/cfg/p4lang-crypt001.tst;p4lang-crypt001.tst;success;p4lang: macsec with des
 http://sources.freertr.org/cfg/p4lang-crypt002.tst;p4lang-crypt002.tst;success;p4lang: macsec with 3des
 http://sources.freertr.org/cfg/p4lang-crypt003.tst;p4lang-crypt003.tst;success;p4lang: macsec with aes128cbc
